# RTranslator

./: .editorconfig  .gitignore  .gitmodules  README.md  Sideloading.md  TODO_LIST.md  build.gradle  gradle.properties
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build-apk.yml  copy-models.yml  export-mms-tts.yml
apks/: README.md  RTranslator_3.0.0_alpha1.apk  RTranslator_3.0.0_alpha2.apk
app/: build.gradle  proguard-rules.pro
app/libs/: sqlite4java-android-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/cpp/src/: BergamotTranslator.cpp  CMakeLists.txt  DictionaryTranslator.cpp  SentencePieceProcessorInterface.cpp
app/src/main/cpp/src/bergamot_translator/: BergamotTranslator.cpp  CMakeLists.txt
app/src/main/cpp/src/libs/bergamot/: .gitmodules
app/src/main/cpp/src/protobuf/: dictionary_data.pb.cc  dictionary_data.pb.h
app/src/main/java/nie/translator/rtranslator/: Global.java  LoadingActivity.java
app/src/main/java/nie/translator/rtranslator/access/: AccessActivity.java  DownloadFragment.java  DownloadFragment2.java  DownloadReceiver.java  Downloader.java
app/src/main/java/nie/translator/rtranslator/access/downloader2/: DownloadInfo.java  Downloader2.java
app/src/main/java/nie/translator/rtranslator/bluetooth/: BluetoothCommunicator.java  BluetoothConnection.java  BluetoothConnectionClient.java  BluetoothConnectionServer.java  Channel.java  ClientChannel.java  Peer.java  ServerChannel.java
app/src/main/java/nie/translator/rtranslator/databases/general/: AppDatabase.java
app/src/main/java/nie/translator/rtranslator/databases/general/dao/: MyDao.java
app/src/main/java/nie/translator/rtranslator/databases/general/entities/: RecentPeerEntity.java
app/src/main/java/nie/translator/rtranslator/databases/tatoeba/: LinksData.java  TatoebaDbWrapper.java  TatoebaDbWrapperOld.java
app/src/main/java/nie/translator/rtranslator/databases/tatoeba/schema/: TatoebaDb.java
app/src/main/java/nie/translator/rtranslator/downloader2/: DownloadInfo.java  DownloadInfoExtended.java  DownloadManager.java  Downloader2.java  DownloaderService.java
app/src/main/java/nie/translator/rtranslator/settings/: LanguagePreference.java  ModelManagerFragment.java  SettingsActivity.java  SettingsFragment.java  SupportLanguagesQuality.java  SupportTtsQualityPreference.java  TtsEnginePreference.java
app/src/main/java/nie/translator/rtranslator/tools/: BluetoothHeadsetUtils.java  ITts.java  NeuralTts.java  TTS.java  TextTools.java  Tools.java  TtsModelManager.java
app/src/main/java/nie/translator/rtranslator/tools/gui/animations/: CustomAnimator.java
app/src/main/java/nie/translator/rtranslator/tools/nn/: CacheContainerNative.java
app/src/main/java/nie/translator/rtranslator/voice_translation/: VoiceTranslationActivity.java  VoiceTranslationService.java
app/src/main/java/nie/translator/rtranslator/voice_translation/_conversation_mode/_conversation/: ConversationService.java
app/src/main/java/nie/translator/rtranslator/voice_translation/_conversation_mode/communication/: ConversationBluetoothCommunicator.java
app/src/main/java/nie/translator/rtranslator/voice_translation/_conversation_mode/communication/recent_peer/: RecentPeersDataManager.java
app/src/main/java/nie/translator/rtranslator/voice_translation/_text_translation/: TranslationFragment.java
app/src/main/java/nie/translator/rtranslator/voice_translation/_walkie_talkie_mode/_walkie_talkie/: WalkieTalkieFragment.java  WalkieTalkieService.java
app/src/main/java/nie/translator/rtranslator/voice_translation/neural_networks/: NeuralNetworkApi.java
app/src/main/java/nie/translator/rtranslator/voice_translation/neural_networks/translation/: BergamotModelsIndicator.java  BergamotTranslator.java  DictionaryTranslator.java  LanguageResourcesIndicator.java  LanguageResourcesManager.java  SentencePieceProcessorJava.java  Tokenizer.java  Translator.java
app/src/main/java/nie/translator/rtranslator/voice_translation/neural_networks/voice/: Recognizer.java  Recorder.java
app/src/main/res/layout/: activity_settings.xml  fragment_model_manager.xml  fragment_translation.xml
app/src/main/res/raw/: hy_mt_supported_languages.xml  madlad_supported_launguages.xml  madlad_supported_launguages_all.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: preferences.xml
docs/: MMS-TTS_INTEGRATION_PLAN.md  VoiceTranslationService_changes.md
gradle/wrapper/: gradle-wrapper.properties
tools/: convert_mms_tts.py  export_mms_tts.py
